fix(html): fixed align items of header

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,6 @@ header nav #hamburger-menu{
 #planning .card a{
     display: inline-block;
     padding: 0.8rem 1rem;
-    aspect-ratio: 1 / 1;
     border-radius: 50%;
     background-color: var(--secondary-col);
 }
@@ -555,7 +554,6 @@ header nav #hamburger-menu{
     #benefits .col{
         width: calc( 100% / 3);
     }
-
 
 }
 
